--- a/Spanish.lng
+++ b/Spanish.lng
@@ -1,5 +1,5 @@
 ﻿|~LANGUAGENAME||Spanish (Español para España y Latinoamérica)|
-|~LANGUAGEVERSION||1.14|
+|~LANGUAGEVERSION||1.15|
 |~LANGUAGEAUTHOR||Marcel Trujillo|
 |~LANGUAGEAUTHOREMAIL||badseed@users.sourceforge.net|
 |- Arcfour crypto routine||- Rutina de criptografia Arcfour|
@@ -23,7 +23,7 @@
 |&CSV File...||Archivo &CSV...|
 |&Database Settings...||Configuración de la Base de &Datos...|
 |&Delete Entry||&Eliminar Entrada|
-|&Delete Password Group...||&Eliminar Grupo de Contraseñas...|
+|&Delete Group...||&Eliminar Grupo...|
 |&Delete||&Eliminar|
 |&Deny||&Denegar|
 |&Disable||&Deshabilitar|
@@ -94,8 +94,8 @@
 |Acknowledgements||Reconocimientos|
 |Add Entry||Añadir Entrada|
 |Add Group||Añadir Grupo|
-|Add Password &Group...||Añadir &Grupo de Contraseñas...|
-|Add Password Su&bgroup...||Añadir Su&bgrupo de Contraseñas...|
+|Add &Group...||Añadir &Grupo...|
+|Add Su&bgroup...||Añadir Su&bgrupo...|
 |Advanced Encryption Standard (AES) (128-bit block cipher using 256-bit key)||Advanced Encryption Standard (AES) (bloque de cifrado de 128-bit usando clave de 256-bit)|
 |Advanced||Avanzado|
 |All Files||Todos los archivos|
@@ -104,7 +104,6 @@
 |An error occurred while importing the file. File cannot be imported.||Un error ocurrió mientras se exportaba el archivo. El archivo no fue importado.|
 |An error occurred||Ha ocurrido un error|
 |Application cannot be restarted automatically!||¡El programa no puede reiniciarse automáticamente!|
-|Application version:||Versión de la aplicación:|
 |Application||Aplicación|
 |Are you sure you want to delete all selected entries?||¿Está seguro que desea eliminar todas las entradas seleccionadas?|
 |Are you sure you want to delete this group?||¿Está seguro que desea eliminar este grupo?|
@@ -129,7 +128,6 @@
 |Cache error (cannot open cached file).||Error de caché (el archivo en caché no puede ser abierto).|
 |Calculate rounds for a 1-second delay on this computer||Calcular el número de vueltas que causarán un retraso de 1 segundo en esta computadora|
 |Cannot access the selected drive.||No es posible acceder la unidad seleccionada.|
-|cannot be loaded!||¡No puede ser cargado!|
 |Cannot open temporary file for printing!||¡No puede abrirse el archivo temporal para impresión!|
 |Cannot register the global hot key.||No se puede registrar la combinación de teclas global.|
 |Change &Language...||Cambiar Idioma...|
@@ -140,6 +138,7 @@
 |Change group:||Cambiar Grupo:|
 |Check for update at KeePass startup||Revisar actualizaciones al iniciar KeePass|
 |Check For Update||Revisar Actualizaciones|
+|Choose between local help and online help center.||Escoger entre ayuda local y el centro de ayuda en línea.|
 |Click [Cancel] to abort changing the key.||Haga click en [Cancelar] para abortar el cambio de clave.|
 |Click [No] to open the file in normal writing mode.||Haga click en [No] para abrir el archivo en modo de escritura.|
 |Click [No] to reuse the selected key file for this database.||Haga click en [No] para reutilizar el archivo de clave seleccionado para esta base de datos.|
@@ -160,10 +159,10 @@
 |Command line argument||Argumento para la línea de comandos|
 |Connect failed, cannot check for update.||Falló la conexión, no se pudo comprobar si habían actualizaciones.|
 |Copy &All||Copiar &Todos|
-|Copy &Password to Clipboard||Copiar &Contraseña en el portapapeles|
+|Copy &Password||Copiar &Contraseña|
 |Copy &URL to Clipboard||Copias &URL al Portapapeles|
 |Copy URLs to clipboard instead of launching them (exception: cmd:// URLs)||Copiar URLs al portapapeles en vez de ejecutarlas (excepción: URLs de la forma cmd://)|
-|Copy User &Name to Clipboard||Copiar &Nombre de Usuario al Portapapeles|
+|Copy User &Name||Copiar &Nombre de Usuario|
 |Create &Association||Crear &Asociación|
 |Create New Password Database||Crear una nueva contraseña de la base de datos|
 |Create new IDs||Crear nuevas IDs|
@@ -181,20 +180,18 @@
 |Deleting a group will delete all items and subgroups in that group, too.||Borrar un grupo borrará también todos los elementos y subgrupos presentes en el grupo.|
 |Disable 'Save' button if the database hasn't been modified||Deshabilitar el botón 'Guardar' si la base de datos no ha sido modificada|
 |Disable unsafe (security-critical) operations like exports, etc.||Deshabilitar operaciones inseguras (seguridad crítica) como exportar, etc.|
-|Disabled, not loaded||Deshabilitado, no fue cargado|
 |Display images on buttons||Mostrar imágenes en los botones|
 |Do you grant the application access to your KeePass database?||¿Le concede usted a la aplicación acceso a su base de datos de KeePass?|
-|Do you want to load the plugin?||¿Desea cargar el plugin?|
 |Do you want to overwrite it?||¿Desea sobreescribirlo?|
 |Do you want to overwrite the current attachment?||Usted desea sobreecribir el adjunto?|
 |Do you want to save the changes before closing?||¿Desea guardar los cambios antes de salir?|
 |Do you want to visit the KeePass homepage now?||¿Desea usted visitar el sitio web de KeePass ahora?|
 |Do you wish to restart KeePass now?||¿Desea reiniciar KeePass ahora?|
 |Dupli&cate Entry||&Duplicar Entrada|
+|Ed&it Group...||Ed&itar grupo...|
 |E&xit||S&alir|
-|E&xtras||E&xtras|
-|Edit Entry||Editar Entrada|
-|Edit Group||Editar Grupo|
+|Edit Entry||Editar gntrada|
+|Edit Group||Editar grupo|
 |EITHER enter a master password OR select a key file.||Introduzca una contraseña maestra O seleccione un archivo de clave.|
 |eMail||eMail|
 |Enable remote control (allow applications to communicate with KeePass)||Activar control remoto (permitir a otras aplicaciones comunicarse con KeePass)|
@@ -240,7 +237,7 @@
 |Find||Encontrar|
 |General||General|
 |Generate a random password...||Generar una contraseña aleatoria...|
-|Get More Plugins...||Obtener más plugins...|
+|Get more plugins...||Obtener más plugins...|
 |Get Random Data for Key Generation||Obtener data aleatoria para generar la clave|
 |Get Random||Obtener Aleatorio|
 |Global auto-type hot key combination:||Combinación de teclas global para la escritura automática:|
@@ -248,6 +245,8 @@
 |Group Tree||Árbol de Grupos|
 |Group:||Grupo:|
 |Help:||Ayuda:|
+|Help &Source...||Fuente de a&yuda...|
+|Help Source||Fuente de ayuda|
 |Here you can associate .kdb files with KeePass (so KeePass opens the file when double-clicking on it):||Aquí usted puede asociar los archivo .kdb con KeePass (KeePass abrirá estos archivos cuando haga doble click sobre ellos):|
 |Here you can configure all installed KeePass plugins.||Acá usted puede configurar todos los complementos que haya instalado.|
 |Here you can configure KeePass.||Aquí usted puede configurar KeePass.|
@@ -277,7 +276,6 @@
 |Invalid/corrupted file structure||Estructura de archivo inválida/dañada|
 |Invalid/wrong key||Clave inválida/incorrecta|
 |It contains an unmatched quote||Contiene una comilla no cerrada|
-|It is possible that the plugin is compatible, but it's also possible that it will crash KeePass.||Es probable que el plugin sea compatible, pero también es posible que haga fallar al KeePass.|
 |Just hack some random keys into the edit box above.||Escribas algunas claves aleatorias dentro del cuadro superior.|
 |Paste your TANs into the edit box below. All characters that are not explicitly specified as TAN characters are treated as separators, and only substrings consisting of TAN characters are added as TAN entries.||Pegue sus TANs en la ventana de edición siguiente. Todos los caracteres que no sean explícitamente especificados como caracteres TAN son considerados separadores, y sólo subsecuencias compuestas por caracteres TAN son agregadas como entradas TAN.|
 |KeePass - Save Before Close/Lock?||KeePass - ¿Guardar antes de Cerrar/Bloquear?|
@@ -298,6 +296,7 @@
 |Load a Language File||Cargar un archivo de idioma|
 |Load Language File||Cargar archivo de idioma|
 |Loading error||Error al cargar|
+|Local help file||Archivo de ayuda local|
 |Lock workspace when locking Windows, switching user or sleeping||Bloquear el área de trabajo al bloquear Windows, cambiar de usuario o hibernar|
 |Lock workspace when minimizing the main window||Bloquear el área de trabajo cuando se minimice la ventana principal|
 |Make sure a writable medium is inserted.||Asegúrese que ha insertado un medio con posibilidad de escritura.|
@@ -310,7 +309,6 @@
 |Minimize to tray instead of taskbar||Minimizar a la bandeja del sistema en vez de la barra de herramientas|
 |Minus (-)||Menos (-)|
 |Mo&ve Entry One Down||Mover Entrada una &posición hacia Abajo|
-|Modif&y Password Group...||Modi&ficar Grupo de Contraseñas...|
 |Modify existing password entry.||Modificar una entrada de contraseña existente.|
 |Modify existing password group.||Modificar un grupo de contraseñas existente.|
 |More Colors...||Más colores...|
@@ -343,6 +341,7 @@
 |Number of key encryption rounds:||Número de veces que será cifrada la clave:|
 |Number of selected entries (number of entries in the list)||Número de entradas seleccionadas (número de entradas en la lista)|
 |Number the TANs consecutively, starting from this value||Número de TANs consecutivas, empezando desde este valor|
+|Online help center||Centro de ayuda en línea|
 |Open &Help File||Abrir Arc&hivo de Ayuda|
 |Open &License File||Abrir &Licencia|
 |Open &URL(s)||Abrir &URL(s)|
@@ -369,7 +368,6 @@
 |Pick an Icon||Seleccione un Icono|
 |Please choose if KeePass should use the key of the currently opened database or ask you to define a new key to encrypt the exported file.||Por favor elija si KeePass debería utilizar la clave de la base de datos actualmente abierta o solicitarle que defina una nueva clave para cifrar el archivo exportado.|
 |Please restart KeePass manually.||Por favor reinicie KeePass manualmente.|
-|Plugin has been designed for:||El plugin ha sido diseñado para:|
 |Plugin||Plugin|
 |Plugins||Plugins|
 |Pr&int Group...||Impr&imir Grupo...|
@@ -411,7 +409,7 @@
 |Show &Columns||Mostrar &Columnas|
 |Show &Entry View||Mostrar &Vista Previa de las Entradas|
 |Show &Toolbar||&Mostrar barra de herramientas|
-|Show All &Expired Entries||Mostrar Todas las &Entradas Vencidas|
+|Show &Expired Entries||Mostrar las &Entradas Vencidas|
 |Show entries that will expire soon (if any)||Mostras entradas próximas a expirar (en caso de haberlas)|
 |Show expired entries (if any)||Mostrar entradas vencidas (en caso de haberlas)|
 |Show full path in the title bar (instead of file name only)||Mostrar la ruta completa en la barra del título (en lugar de solamente el nombre del archivo)|
@@ -449,23 +447,22 @@
 |The group you selected cannot store entries. Please select a different group.||El grupo que seleccionó no pueda almacenar entradas. Por favor seleccione otro grupo.|
 |The higher this number, the harder are dictionary attacks. But also the higher this number, the slower the database loading and saving.||Mientras más alto sea este número, mayor dificultad tendrán los ataques de diccionario. Pero elevar este número también hace que la base de datos sea más lenta para cargar y guardar.|
 |The language file has been installed.||El archivo de idioma fue instalado.|
+|The local help file is a snapshot of the product documentation at the point when this product version was published. It is not updated automatically.||El archivo de ayuda local es una copia de la documentación del producto al momento de haber sido publicada esta versión. No se actualiza automáticamente.|
+|The online help center always contains the latest version of the product documentation. Internet connection is required.||El centro de ayuda en línea siempre dispone de la versión más reciente de la documentación del producto. Es necesaria una conexión a internet.|
 |The password must consist of at least one character!||¡La contraseña debe tener al menos un caracter!|
 |The program is distributed under the terms of the GNU General Public License v2 or later.||El programa es distribuido bajo los términos de la GNU General Public License v2 o posterior.|
 |The program will exit now.||El programa se cerrará ahora.|
 |The random the better.||Más aleatorio, mejor.|
 |There already is a file attached with this entry.||Ya hay un archivo adjuntado a esta entrada.|
 |There is no file attached with this entry.||No hay ningún archivo adjuntado a esta entrada.|
-|Therefore save all data before you continue.||Por lo tanto guarde todo antes de continuar.|
 |This is a list of all expired entries||Esta es una lista de todas las entradas vencidas.|
-|This plugin has been designed for a different application version and may be incompatible with this one.||Este plugin ha sido desarrollado para una versión distinta de la aplicación y puede ser incompatible con esta.|
-|This plugin will be disabled after you restart KeePass.||Este plugin será deshabilitado después de que reinicie el KeePass.|
-|This plugin will be enabled after you restart KeePass.||Este plugin será activado después de que reinicie el KeePass.|
+|This option is disabled, because local help is not installed.||Esta opción se encuentra deshabilitada porque la ayuda local no fue instalada.|
 |This will remove all selected entries unrecoverably!||¡Esto eliminará todas las entradas seleccionadas permanentemente!|
 |Timed: copy data to the clipboard and clear it automatically after some seconds||Temporizado: copiar la información al portapapeles y borrarla automáticamente tras unos segundos|
 |Title:||Título:|
 |Title||Título|
 |To execute this operation you must enable unsafe operations in the options dialog.||Para ejecutar esta operación, usted debe habilitar operaciones inseguras en el panel de opciones.|
-|Too few memory (RAM) available||Muy poca memoria (RAM) disponible|
+|Too little memory (RAM) available||Muy poca memoria (RAM) disponible|
 |Total number of groups / entries||Número total de grupos / entradas|
 |Total: %u groups / %u entries||Total: %u grupo(s) / %u entrada(s)|
 |Translation Author Contact||Contactar al autor de la traducción|
@@ -480,6 +477,7 @@
 |Upper-case (A, B, C, ...)||Mayúsculas (A, B, C, ...)|
 |URL:||URL:|
 |URL||URL|
+|Use advanced memory protection (DPAPI, only Windows Vista and higher)||Usar protección de memoria avanzada (DPAPI, sólo Windows Vista y superior)|
 |Use &Mouse as Random Source||Usar &Mouse como fuente aleatoria|
 |Use &Simple List View for TAN-Only Groups||Usar Vista de Lista Simple para Grupos de Solo-Tan|
 |Use alternative auto-type method (minimize window)||Usar método alternativo de escritura automática (minimizar la ventana)|
@@ -489,6 +487,7 @@
 |User &name||Usuario|
 |User name:||Usuario:|
 |User Name||Usuario|
+|Use the following help source when a "Help" button within KeePass is clicked:||Usar la siguiente fuente de ayuda al hacer click en un botón de "Ayuda" dentro de KeePass:|
 |Using this wizard you can easily add TAN entries.||Usando este asistente, usted puede fácilmente añadir entradas TAN.|
 |UUID||UUID|
 |Value||Valor|
